# AI-SCDC

./: .gitignore  AI_SCDC_CLOUD_RUN.md  README.md  STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pytest.ini
apps/api/: Dockerfile.remote-worker  pyproject.toml
apps/api/alembic/: README.md
apps/api/app/ai_company_api/: __init__.py  main.py
apps/api/app/ai_company_api/api/: __init__.py  routes.py
apps/api/app/ai_company_api/db/: __init__.py  session.py
apps/api/app/ai_company_api/models/: __init__.py  entities.py
apps/api/app/ai_company_api/schemas/: __init__.py  api.py
apps/api/app/ai_company_api/services/: aliyun_clients.py  aliyun_config.py  artifact_plane.py  cloud_queue_providers.py  cloud_run_log_sync.py  cloud_run_logs.py  cloud_runner.py  cloud_sandbox_executor.py  docker_sandbox.py  (+18 more)
apps/api/tests/: test_aliyun_clients.py  test_aliyun_config.py  test_api_endpoints.py  test_cloud_object_storage.py  test_cloud_run_api.py  test_cloud_sandbox_executor.py  test_docker_sandbox_executor.py  test_fake_planner.py  test_github_repository_api.py  test_local_runner_api.py  test_model_planner.py  test_model_settings_api.py  test_patch_approval_api.py  test_planner_endpoints.py  test_pull_request_api.py  test_remote_worker.py  test_sandbox_profile_api.py  test_task_state.py  test_test_review_debug_api.py  test_usage_ledger_api.py
apps/worker/: pyproject.toml
apps/worker/app/ai_company_worker/: __init__.py  local_runner.py  main.py  simulator.py  test_runner.py
apps/worker/tests/: test_local_runner.py  test_simulator.py  test_test_runner.py
services/llm-gateway/: pyproject.toml
services/llm-gateway/app/ai_company_llm_gateway/: __init__.py  adapters.py  models.py  openai_compatible.py
services/llm-gateway/tests/: test_fake_adapter.py  test_model_contracts.py  test_openai_compatible_adapter.py
(+60 files in other folders)
