[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-company-worker"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["app"]
