[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-company-llm-gateway"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["app"]
